fix: doble scrollbar (y modernizado)
- Se arregla el doble scrollbar ocultando el scroll en el body (queda solo en el html)
- Se pone el scrollbar moderno en los estilos globales.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ html, body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  overflow-y: hidden;
 }
 
 .titulo {
@@ -132,4 +133,24 @@ body {
     width: 2rem;
     height: 2rem;
   }
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #b3b3b3;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: padding-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #808080;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f0f0f0;
+  border-radius: 10px;
 }
